tests/error/fptr_call_decl.gw
#! [contains] Can't call late function pointer at declaration site
funptr void test(int);
(var test t)(2);
